# backend/app/schemas/enums.py
@@ -1,0 +1,7 @@
+from enum import Enum
+
+
+class MessageType(str, Enum):
+    NORMAL = "NORMAL"
+    VOICE = "VOICE"
+    SYSTEM = "SYSTEM"
